<resources>
    <string name="app_name">ZeroSoles</string>
    <string name="top_bar_cart">Cart</string>
    <string name="top_bar_profile">Profile</string>
    <string name="top_bar_search">Search</string>
    <string name="top_bar_menu">Menu</string>
    <string name="logo">Logo</string>
    <string name="slogan">Sole Searching? Find Zero at ZeroSoles!</string>

    <string name="title_home">Home</string>
    <string name="title_login">Log in</string>
    <string name="title_account">Account</string>
    <string name="title_contact">Contact</string>
    <string name="title_support">Support</string>
    <string name="title_logout">Logout</string>
    <string name="title_my_order">Orders</string>
    <string name="title_store">Stores near you</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_stores_near_you">StoresNearYouActivity</string>
    <string name="permission_rationale_location">We need your approximate location to better determine which stores are close by.</string>
    <string name="permission_required">Location permissions are required for this feature to work.</string>

    <string name="header_title">ENJOY THE NATURAL COMFORT OF BAREFOOT SHOES</string>
    <string name="content_title">Genuine comfort comes from letting your feet do what natural bending, flexing, moving, feeling. Xero Shoes let them do that. Our customers say it life-changing.</string>
    <string name="heading1">Best-Selling Men\'s Shoes</string>
    <string name="heading3">Best-Selling Women\'s Shoes</string>
    <string name="heading2">WHY YOU\'LL LOVE YOUR ZEROSOLES</string>
    <string name="content1">Barefoot-Inspired Comfort</string>
    <string name="content2">5,000 Mile Sole Warranty</string>
    <string name="content3">Shoes for everything you do</string>
    <string name="tv1">Natural Fit</string>
    <string name="tv2">Natural Feel</string>
    <string name="tv3">Natural Motion</string>
    <string name="contentTv1">Wide toe boxes let your toes spread and relax. "Zero-drop" non-elevated heel for proper posture.</string>
    <string name="contentTv2">Our FeelTrue sole protects your foot while giving your brain the feedback and stimulation required.</string>
    <string name="contentTv3">Flexible soles let your foot bend and flex naturally. Low-to-the-ground design for balance and agility.</string>
    <string name="footer">All materials on this website © 2024. Feel the World, Inc, 320 Interlocken Parkway, Suite 100, Broomfield, CO 80021, USA.</string>

    <!-- Strings related to login -->
    <string name="header_log_in">Get Started</string>
    <string name="tab_login">Login</string>
    <string name="tab_signup">Signup</string>
    <string name="hint_username_or_email">Username or Email</string>
    <string name="hint_password">Password</string>
    <string name="action_login">Log in</string>
    <string name="err_required_field">This field is required</string>
    <string name="err_invalid_login_credentials">Verification failed. Please check your username/email and password.</string>
    <string name="err_account_deactivated">Your account has been de-activated. Contact support for more details.</string>
    <string name="err_network">A network issue has occurred. Please try again later.</string>
    <string name="err_other">An error has occurred.</string>

    <!-- Strings related to signup -->
    <string name="header_signup">Become a Member</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="action_signup">Sign up</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email (optional)</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="err_confirm_password_mismatch">Passwords do not match.</string>
    <string name="err_invalid_email">Invalid email address.</string>
    <string name="err_invalid_password">Password must be at least %1$d characters long and contain a lowercase letter, an uppercase letter, a digit, and a special character.</string>
    <string name="err_duplicate_username">Username is already taken.</string>
    <string name="err_duplicate_email">There is already an account associated with this email.</string>
    <string name="prompt_confirm_logout">Are you sure you want to log out? We\'d miss you.</string>
    <string name="prompt_signup_success">You\'ve successfully become a member. Would you like to sign in?</string>

    <string-array name="results_options">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>

    <string name="remove"><u>Remove</u></string>
</resources>
