<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/orders"
            android:icon="@drawable/order"
            android:title="@string/title_my_order" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/contact"
            android:title="@string/title_contact" />
        <item
            android:id="@+id/account"
            android:icon="@drawable/account"
            android:title="@string/title_account" />
        <item
            android:id="@+id/store"
            android:icon="@drawable/map"
            android:title="@string/title_store" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/title_logout" />
    </group>

</menu>
