<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:icon="@drawable/home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/action_contact"
            android:icon="@drawable/contact"
            android:title="@string/title_contact" />
        <item
            android:id="@+id/action_map"
            android:icon="@drawable/map"
            android:title="@string/title_store" />
        <item
            android:id="@+id/action_login"
            android:icon="@drawable/account"
            android:title="@string/title_login" />
    </group>
</menu>
